# rogeng

./: .gitignore  CMakeLists.txt  README.md
docs/: config.txt  overview.txt
docs/modules/: entity_component_system.txt  log.txt
source/: config.h  main.cpp
source/core/: command_line_arguments.cpp  command_line_arguments.h  core.cpp  core.h  helperr.cpp  helperr.h  init.cpp  lua.cpp  lua.h  shutdown.cpp
source/ecs/: ecs.cpp  ecs.h  init.cpp  shutdown.cpp
source/log/: log.cpp  log.h
source/modules/ecs/: ecs.cpp  ecs.h
source/modules/log/: log.cpp  log.h
source/pch/: pch.h
source/rogeng/: initialize_modules.cpp  rogeng.cpp  rogeng.h
