CMAKE_MINIMUM_REQUIRED(VERSION 3.18)

PROJECT(rogeng LANGUAGES CXX)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_CXX_STANDARD 17)

SET(SRCDIR "source/")
SET(INCDIR "include/")

FILE(GLOB_RECURSE SRC ${SRCDIR}/*.c ${SRCDIR}/*.cpp)

FIND_PACKAGE(Lua REQUIRED)

INCLUDE(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
)

ENABLE_TESTING()

ADD_EXECUTABLE(rogeng ${SRC})

TARGET_LINK_LIBRARIES(rogeng gtest_main)
INCLUDE(GoogleTest)
gtest_discover_tests(rogeng)

# Include / Source dir
TARGET_INCLUDE_DIRECTORIES(rogeng PUBLIC ${SRCDIR})
TARGET_INCLUDE_DIRECTORIES(rogeng PUBLIC ${INCDIR})

# Lua 
TARGET_INCLUDE_DIRECTORIES(rogeng PUBLIC ${LUA_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(rogeng PUBLIC ${LUA_LIRBARIES})

TARGET_PRECOMPILE_HEADERS(rogeng PUBLIC ${SRCDIR}pch/pch.h)
